example/k8s/dev.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: $SERVICE_NAME-api
  name: $SERVICE_NAME-dev-api
spec:
  ports:
  - { port: 8080, targetPort: 8080, nodePort: $API_DEV_PORT }
  selector:
    app.kubernetes.io/name: $SERVICE_NAME-api
  type: NodePort
