example/k8s/media-worker.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: apicrud-media-worker
  name: apicrud-media-worker
spec:
  replicas: $REPLICAS_WORKER
  selector:
    matchLabels:
      app.kubernetes.io/name: apicrud-media-worker
  template:
    metadata:
      labels:
        app.kubernetes.io/name: apicrud-media-worker
    spec:
      containers:
      - name: $SERVICE_NAME-worker
        image: $REGISTRY_URI/$REGISTRY_PATH-media/apicrud-media-worker:$TAG
        ports:
        - containerPort: 5555
        resources:
          limits:
            memory: $LIMIT_MEM_WORKER
          requests:
            cpu: $LIMIT_CPU_REQUEST
            memory: $LIMIT_MEM_REQUEST
      imagePullSecrets: [ $IMAGEPULL_SPEC ]
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: apicrud-media-worker
  name: apicrud-media-worker
spec:
  ports:
  - port: 5555
  selector:
    app.kubernetes.io/name: apicrud-media-worker
