example/k8s/media.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: apicrud-media
  name: apicrud-media
spec:
  replicas: $REPLICAS_API
  template:
    metadata:
      labels:
        app.kubernetes.io/name: apicrud-media
    spec:
      containers:
      - name: apicrud-media
        image: $REGISTRY_URI/$REGISTRY_PATH-media/apicrud-media:$TAG
        livenessProbe:
          initialDelaySeconds: 30
          periodSeconds: 10
          httpGet:
            path: /api/v1/health
            port: $MEDIA_API_PORT
        ports:
        - containerPort: $MEDIA_API_PORT
        resources:
          limits:
            memory: $LIMIT_MEM_API
          requests:
            cpu: $LIMIT_CPU_REQUEST
            memory: $LIMIT_MEM_REQUEST
      imagePullSecrets: [ $IMAGEPULL_SPEC ]
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: apicrud-media
  name: apicrud-media
spec:
  ports:
  - { port: $MEDIA_API_PORT, targetPort: $MEDIA_API_PORT, name: media }
  selector:
    app.kubernetes.io/name: apicrud-media
