example/k8s/prometheus.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: $SERVICE_NAME-prometheus
spec:
  clusterIP: None
  ports:
  - port: 9090
  selector:
    app.kubernetes.io/name: $SERVICE_NAME-prometheus
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: $SERVICE_NAME-prometheus
  labels:
    app.kubernetes.io/name: $SERVICE_NAME-prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: $SERVICE_NAME-prometheus
  serviceName: $SERVICE_NAME-prometheus
  template:
    metadata:
      labels:
        app.kubernetes.io/name: $SERVICE_NAME-prometheus
    spec:
      containers:
      - name: prometheus
        image: prom/prometheus:v$VERSION_PROMETHEUS
        ports:
        - containerPort: 9090
        volumeMounts:
        - name: config
          mountPath: /etc/prometheus/prometheus.yml
          subPath: prometheus.yml
        - name: data
          mountPath: /prometheus
      volumes:
      - name: config
        configMap:
          name: $SERVICE_NAME-prometheus
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ ReadWriteOnce ]
      resources:
        requests:
          storage: 500Mi
