example/k8s/rmq.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: $SERVICE_NAME-rmq
  name: $SERVICE_NAME-rmq
spec:
  clusterIP: $SERVICE_IP
  ports:
  - { port: 4369, targetPort: 4369, name: epmd }
  - { port: 5671, targetPort: 5671, name: amqp-ssl }
  - { port: 5672, targetPort: 5672, name: amqp }
  selector:
    app.kubernetes.io/name: $SERVICE_NAME-rmq
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/name: $SERVICE_NAME-rmq
    release: "0.1"
  name: $SERVICE_NAME-rmq
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: $SERVICE_NAME-rmq
      release: "0.1"
  serviceName: $SERVICE_NAME-rmq
  template:
    metadata:
      labels:
        app.kubernetes.io/name: $SERVICE_NAME-rmq
        release: "0.1"
    spec:
      containers:
      - name: $SERVICE_NAME-rmq
        image: rabbitmq:$VERSION_RABBITMQ
        ports:
        - containerPort: 4369
        - containerPort: 5671
        - containerPort: 5672
        - containerPort: 25672
        volumeMounts:
        - mountPath: /var/lib/rabbitmq
          name: rmq
  volumeClaimTemplates:
  - metadata:
      name: rmq
    spec:
      accessModes: [ ReadWriteOnce ]
      resources:
        requests:
          storage: 500Mi
