example/k8s/ui.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: $SERVICE_NAME-ui
  name: $SERVICE_NAME-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: $SERVICE_NAME-ui
  template:
    metadata:
      labels:
        app.kubernetes.io/name: $SERVICE_NAME-ui
    spec:
      containers:
      - name: $SERVICE_NAME-ui
        image: $REGISTRY_URI/$REGISTRY_PATH-ui:$TAG
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: $LIMIT_MEM_DEFAULT
          requests:
            cpu: $LIMIT_CPU_REQUEST
            memory: $LIMIT_MEM_REQUEST
      imagePullSecrets: [ $IMAGEPULL_SPEC ]
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: $SERVICE_NAME-ui
  name: $SERVICE_NAME-ui
spec:
  clusterIP: None
  ports:
  - port: 80
  selector:
    app.kubernetes.io/name: $SERVICE_NAME-ui
