example/k8s/worker.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: $SERVICE_NAME-worker-$QUEUE
  name: $SERVICE_NAME-worker-$QUEUE
spec:
  replicas: $REPLICAS_WORKER
  selector:
    matchLabels:
      app.kubernetes.io/name: $SERVICE_NAME-worker-$QUEUE
  template:
    metadata:
      labels:
        app.kubernetes.io/name: $SERVICE_NAME-worker-$QUEUE
    spec:
      containers:
      - name: $SERVICE_NAME-worker
        image: $REGISTRY_URI/$REGISTRY_PATH/$SERVICE_NAME-worker:$TAG
        ports:
        - containerPort: 5555
        resources:
          limits:
            memory: $LIMIT_MEM_WORKER
          requests:
            cpu: $LIMIT_CPU_REQUEST
            memory: $LIMIT_MEM_REQUEST
      imagePullSecrets: [ $IMAGEPULL_SPEC ]
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: $SERVICE_NAME-worker-$QUEUE
  name: $SERVICE_NAME-worker-$QUEUE
spec:
  ports:
  - port: 5555
  selector:
    app.kubernetes.io/name: $SERVICE_NAME-worker-$QUEUE
