example/k8s/api.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: $SERVICE_NAME-api
  name: $SERVICE_NAME-api
spec:
  replicas: $REPLICAS_API
  template:
    metadata:
      labels:
        app.kubernetes.io/name: $SERVICE_NAME-api
    spec:
      containers:
      - name: $SERVICE_NAME-api
        image: $REGISTRY_URI/$REGISTRY_PATH/$SERVICE_NAME-api:$TAG
        livenessProbe:
          initialDelaySeconds: 30
          periodSeconds: 10
          httpGet:
            path: /api/v1/health
            port: 8080
        ports:
        - containerPort: 8080
        resources:
          limits:
            memory: $LIMIT_MEM_API
          requests:
            cpu: $LIMIT_CPU_REQUEST
            memory: $LIMIT_MEM_REQUEST
      imagePullSecrets: [ $IMAGEPULL_SPEC ]
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: $SERVICE_NAME-ingress-public
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/client-body-buffer-size: 20m
    nginx.ingress.kubernetes.io/proxy-body-size: 20m
    # nginx.ingress.kubernetes.io/configuration-snippet: |
    #   limit_req_zone ${DOL}binary_remote_addr zone=api:10m rate=30r/m;
    #   limit_req_status 429;
spec:
  rules:
  - host: $EXAMPLE_PUBLIC_URL
    http:
      paths:
      - path: /api
        backend:
          serviceName: $SERVICE_NAME-api
          servicePort: 80
      - path: /
        backend:
          serviceName: $SERVICE_NAME-ui
          servicePort: 80
  tls:
  - hosts:
    - $EXAMPLE_PUBLIC_URL
    secretName: tls-$SERVICE_NAME-public
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: $SERVICE_NAME-api
  name: $SERVICE_NAME-api
spec:
  clusterIP: None
  ports:
  - { port: 80, targetPort: 8080, name: web }
  selector:
    app.kubernetes.io/name: $SERVICE_NAME-api
