example/k8s/prod.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: $SERVICE_NAME-ingress-public
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/client-body-buffer-size: 20m
    nginx.ingress.kubernetes.io/proxy-body-size: 20m
    # nginx.ingress.kubernetes.io/configuration-snippet: |
    #   limit_req_zone ${DOL}binary_remote_addr zone=api:10m rate=30r/m;
    #   limit_req_status 429;
spec:
  rules:
  - host: $PUBLIC_URL
    http:
      paths:
      - path: /api
        backend:
          service:
            name: $SERVICE_NAME-api
            port:
              number: 80
      - path: /
        backend:
          service:
            name: $SERVICE_NAME-ui
            port:
              number: 80
  tls:
  - hosts:
    - $EXAMPLE_PUBLIC_URL
    secretName: tls-$SERVICE_NAME-public
